# kelk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: examples.yml  wasm32.yml  workflow.yml  x86-64.yml
crates/allocator/: Cargo.toml  README.md
crates/allocator/src/: lib.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/env/: Cargo.toml  README.md
crates/env/src/: api.rs  error.rs  export.rs  import.rs  lib.rs
crates/kelk/: Cargo.toml  README.md
crates/kelk/src/: context.rs  lib.rs  mock.rs
crates/kelk/src/blockchain/: address.rs  blockchain.rs  error.rs  mock.rs  mod.rs
crates/kelk/src/storage/: allocated.rs  codec.rs  error.rs  lazy.rs  mock.rs  mod.rs  storage.rs
crates/kelk/src/storage/bst/: header.rs  mod.rs  node.rs  tree.rs
crates/kelk/src/storage/collections/: mod.rs
crates/kelk/src/storage/collections/bst/: error.rs  header.rs  tree.rs
crates/kelk/src/storage/collections/vector/: mod.rs  vec.rs
crates/kelk/src/storage/linked_list/: header.rs  item.rs  linked_list.rs  mod.rs  node.rs
crates/kelk/src/storage/str/: mod.rs
crates/kelk/src/storage/vec/: header.rs  mod.rs
crates/kelk/src/storage/vector/: header.rs  mod.rs  vec.rs
examples/accessor/: Cargo.toml  lib.rs
examples/accessor/.cargo/: config
examples/calculator/: Cargo.toml  README.md  contract.rs  error.rs  lib.rs  message.rs
examples/calculator/.cargo/: config
examples/calculator/src/: contract.rs  contract_test.rs  error.rs  lib.rs  message.rs
examples/erc20/: Cargo.toml
examples/erc20/src/: contract.rs  erc20.rs  erc20_test.rs  error.rs  message.rs
examples/erc_token/: .gitignore  Cargo.toml
examples/erc_token/src/: contract.rs  contract_test.rs  error.rs  lib.rs  message.rs
examples/hello_world/: .gitignore  Cargo.toml  README.md  lib.rs
examples/hello_world/.cargo/: config
examples/hello_world/src/: contract.rs  contract_test.rs  error.rs  lib.rs
examples/sum/: lib.rs
examples/token/: Cargo.toml  ReadMe.md
examples/token/src/: contract.rs  contract_test.rs  erc20.rs  erc20_test.rs  error.rs  lib.rs  message.rs
kelk/: Cargo.toml
kelk/derive/: Cargo.toml  README.md
kelk/derive/src/: lib.rs
kelk/env/: Cargo.toml  README.md
kelk/env/src/: blockchain.rs  context.rs  error.rs  export.rs  import.rs  lib.rs  memory.rs  mock.rs  params.rs  response.rs  storage.rs
kelk/lib/: Cargo.toml  README.md
kelk/lib/src/: error.rs  lib.rs  mock.rs  storage.rs
kelk/lib/src/collections/: mod.rs
kelk/lib/src/collections/bst/: bst.rs  error.rs  header.rs  mod.rs  node.rs  tree.rs
kelk/lib/src/collections/vector/: error.rs  header.rs  mod.rs  vec.rs
kelk/lib/src/types/: address.rs  mod.rs
kelk/src/: buffer.rs  context.rs  error.rs  export.rs  import.rs  kelk.rs  lib.rs  memory.rs  params.rs  ptr.rs  response.rs  sys.rs
