[package]
name = "kelk"
version = "0.0.1"
edition = "2018"
authors = ["Mantre <mantre@protonmail.com>"]
license = "MIT"
repository = "https://github.com/zarbchan/kelk"
description = "Kelk is a Low-level interface for interacting with the smart contract Wasm executor."


[profile.release]
lto = true

[dependencies]
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
thiserror = "1.0"
serde_json = "1.0"