[package]
name = "kelk"
version = "0.0.5"
edition = "2018"
authors = ["Zarb development team <admin@zarb.network>"]
license = "MIT"
repository = "https://github.com/zarbchan/kelk"
description = "Kelk is a Low-level interface for interacting with the smart contract Wasm executor."


[dependencies]
minicbor = { version = "0.11", features = ["half", "derive"] }
minicbor-derive = "0.7"
kelk-derive = { path = "derive" }
wee_alloc = { version = "0.4", default-features = false }
