[package]
name = "kelk"
version = "0.2.0"
edition = "2021"
authors = ["Zarb development team <admin@zarb.network>"]
license = "MIT"
homepage = "https://zarb.network/"
repository = "https://github.com/zarbchan/kelk"
description = "Kelk is the standard librry for wasm based contracts in Zarb blockchain."


[dependencies]
kelk-env = { path = "../env" }
kelk-derive = { path = "../derive" }
minicbor = { version = "0.18", features = ["half", "derive", "alloc"] }
doc-comment = "0.3"
rand = "0.4"