[package]
name = "kelk"
version = "0.2.0"
edition = "2021"
authors = ["Zarb development team <admin@zarb.network>"]
license = "MIT"
homepage = "https://zarb.network/"
repository = "https://github.com/zarbchan/kelk"
description = "Kelk provide basic materials for writhing WASM based contracts in Zarb blockchain."


[dependencies]
kelk-env = { path = "../env" }
kelk-derive = { path = "../derive" }
kelk-allocator = { path = "../allocator" }
minicbor = { version = "0.18", features = ["half", "derive", "alloc"] }
doc-comment = "0.3"
rand = { version = "0.8", features = ["small_rng"], default-features = false }
wee_alloc = { version = "0.4", default-features = false }
