[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
authors = ["Zarb development team <admin@zarb.network>"]

[dependencies]
kelk-env = { path = "../../kelk/env" }
minicbor = { version = "0.11.1", features = ["half", "derive"] }
minicbor-derive = "0.7.1"

[lib]
name = "calculator"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
