[package]
name = "erc_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
kelk-env = { path = "../../kelk/env" }
kelk-lib = { path = "../../kelk/lib" }
minicbor = { version = "0.11.1", features = ["half", "derive"] }
minicbor-derive = "0.7.1"
wee_alloc = { version = "0.4", default-features = false }

[lib]
name = "calculator"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
panic = "abort"