[package]
name = "erc20"
version = "0.1.0"
edition = "2021"


[dependencies]
kelk-env = { path = "../../kelk/env" }
kelk-lib = { path = "../../kelk/lib" }
minicbor = { version = "0.11.1", features = ["half", "derive"] }
minicbor-derive = "0.7.1"
wee_alloc = { version = "0.4", default-features = false }

[lib]
name = "erc20"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
panic = "abort"