[package]
name = "helloworld"
version = "0.0.1"
edition = "2018"
authors = ["Zarb development team <admin@zarb.network>"]

[dependencies]
kelk = {path = "../../kelk"}

[lib]
name = "hello_world"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
