[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
authors = ["Zarb development team <admin@zarb.network>"]

[dependencies]
kelk = { path = "../../crates/kelk" }
minicbor = { version = "0.18.0", features = ["half", "derive"] }
wee_alloc = { version = "0.4", default-features = false }

[lib]
name = "hello_world"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
strip = true
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
panic = "abort"
