[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Zarb development team <admin@zarb.network>"]

[dependencies]
kelk = { path = "../../crates/kelk" }
kelk-allocator = { path = "../../crates/allocator" }
minicbor = { version = "0.18.0", features = ["half", "derive"] }

[lib]
name = "hello_world"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
strip = true
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
panic = "abort"
