[package]
name = "kelk-env"
version = "0.2.2"
edition = "2021"
authors = ["Zarb development team <admin@zarb.network>"]
license = "MIT"
homepage = "https://zarb.network/"
repository = "https://github.com/zarbchan/kelk"
description = "Kelk-env is a Low-level interface for interacting with Tanour (Wasm executor) in Zarb blockchain."


[dependencies]
minicbor = { version = "0.11", features = ["half", "derive"] }
minicbor-derive = "0.7"
kelk-derive = "0.2.0"
doc-comment = "0.3"


[dev-dependencies]
doc-comment = "0.3"
wasm-bindgen-test = "0.3"