[package]
name = "kelk-lib"
version = "0.2.0"
edition = "2021"
authors = ["Zarb development team <admin@zarb.network>"]
license = "MIT"
homepage = "https://zarb.network/"
repository = "https://github.com/zarbchan/kelk"
description = "Kelk-lib is the standard librry for wasm based contracts in Zarb blockchain."


[dependencies]
kelk-env = "0.2.2"
minicbor = { version = "0.18", features = ["half", "derive"] }